DigicielFull/force-app/main/default/objects/Campaign/fields/Campaign_Key__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Key__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Key</label>
    <type>Text</type>
</CustomField>