DigicielFull/force-app/main/default/objects/Campaign/fields/UltimateParentCampaign__c.field-meta.xml
<CustomField>
    <fullName>UltimateParentCampaign__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; +
BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Parent.Id,
BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Id,
BLANKVALUE(Parent.Parent.Parent.Parent.Id,
BLANKVALUE(Parent.Parent.Parent.Id,
BLANKVALUE(Parent.Parent.Id,
BLANKVALUE(Parent.Id,
Null)))))),
BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Parent.Name,
BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Name,
BLANKVALUE(Parent.Parent.Parent.Parent.Name,
BLANKVALUE(Parent.Parent.Parent.Name,
BLANKVALUE(Parent.Parent.Name,
BLANKVALUE(Parent.Name,
Null)))))))</formula>
    <inlineHelpText>This field shows the Parent Campaign located at the very top of the Campaign Hierarchy. This value cannot be exported into reports, instead you can use &quot;Ultimate Parent Account (Text)&quot; when adding this field to your report</inlineHelpText>
    <label>Ultimate Parent Campaign</label>
    <type>Text</type>
</CustomField>