DigicielFull/force-app/main/default/objects/Campaign/recordTypes/Child_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Child_Campaign</fullName>
    <active>true</active>
    <description>This record type is used when associating a campaign to a parent record</description>
    <label>Child Campaign</label>
</RecordType>