DigicielFull/force-app/main/default/objects/Campaign/recordTypes/Parent_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Parent_Campaign</fullName>
    <active>true</active>
    <description>This record type is to be used as the parent record in a campaign hierarchy</description>
    <label>Parent Campaign</label>
</RecordType>