DigicielFull/force-app/main/default/objects/Campaign/listViews/All_Active_Group_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Active_Group_Campaigns</fullName>
    <booleanFilter>1 AND 2 AND 3 AND (4 or 5)</booleanFilter>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <columns>AMOUNT_ALL</columns>
    <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
    <columns>AMOUNT_WON</columns>
    <columns>CAMPAIGN.TOT_OPPORTUNITIES</columns>
    <columns>CAMPAIGN.TOT_WON_OPPORTUNITIES</columns>
    <columns>Digicel_Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>notEqual</operation>
        <value>Completed,Aborted</value>
    </filters>
    <filters>
        <field>CAMPAIGN.END_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Digicel_Country__c</field>
        <operation>equals</operation>
        <value>Group business team</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>contains</operation>
        <value>hadassah,tony,val,arielle,denzyl</value>
    </filters>
    <label>All Active Group Campaigns</label>
    <language>en_US</language>
</ListView>