DigicielFull/force-app/main/default/objects/Campaign/listViews/All_Jamaica_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Jamaica_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Digicel_Country__c</field>
        <operation>equals</operation>
        <value>Jamaica</value>
    </filters>
    <label>All Jamaica Campaigns</label>
    <language>en_US</language>
    <sharedTo>
        <role>Jamaica</role>
        <roleAndSubordinates>Jamaica</roleAndSubordinates>
    </sharedTo>
</ListView>