DigicielFull/force-app/main/default/objects/Campaign/listViews/AllPNGActiveCampaign.listView-meta.xml
<ListView>
    <fullName>AllPNGActiveCampaign</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Digicel_Country__c</field>
        <operation>contains</operation>
        <value>PNG</value>
    </filters>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All PNG Active Campaign</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>PNG</roleAndSubordinates>
    </sharedTo>
</ListView>