DigicielFull/force-app/main/default/objects/Campaign/listViews/Pacific_Campaigns.listView-meta.xml
<ListView>
    <fullName>Pacific_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>Pacific</value>
    </filters>
    <label>Pacific Campaigns</label>
    <language>en_US</language>
</ListView>